--- a/Nexar.Client.Login/Nexar.Client.Login.csproj
+++ b/Nexar.Client.Login/Nexar.Client.Login.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net472; netstandard2.0</TargetFrameworks>
-    <Version>0.2.2</Version>
+    <Version>0.2.3</Version>
     <Authors>Roman Kuzmin</Authors>
     <Company>Altium LLC</Company>
     <Product>Nexar</Product>
@@ -10,7 +10,20 @@
     <Copyright>Altium LLC</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/NexarDeveloper/nexar-client-login-cs</PackageProjectUrl>
+    <PackageIcon>Nexar.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Nexar.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" />
