--- a/Nexar.Client.Login/Nexar.Client.Login.csproj
+++ b/Nexar.Client.Login/Nexar.Client.Login.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net472; netstandard2.0</TargetFrameworks>
-    <Version>0.3.1</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.4.0</Version>
     <Authors>Roman Kuzmin</Authors>
     <Company>Altium LLC</Company>
     <Product>Nexar</Product>
